tests/transpiler/x/hs/tail_recursion.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/tail_recursion.hs:7:5: error:
    parse error on input ‘return’
  |
7 |     return (sum_rec n - 1 acc + n)
  |     ^^^^^^
