tests/transpiler/x/hs/tail_recursion.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 20:05:11 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
sum_rec n acc = do
    if n == 0 then
        return (acc)

    return (sum_rec n - 1 acc + n)


main :: IO ()
main = do
    print (sum_rec 10 0)
